[package]
name = "kilo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1"
serde_json = "1"
rand = "0.8.4"
dashmap = "5.0.0"
env_logger = "0.9.0"
